<resources>
    <string name="app_name">Othello Game</string>
    <string name="miturno">Su Turno</string>
    <string name="turnoadv">El adversario ha jugado ya...</string>
    <string name="new_round">Nueva Partida</string>
    <string name="game_over">Fin de la partida</string>
    <string name="game_over_message">¿Desea empezar una nueva partida?</string>
    <string name="invalid_movement">Movimiento inválido</string>
    <string name="pass_movement">Ha pasado</string>
    <string name="title_select">Tamaño del tablero</string>
    <string name="cancelar">Cancelar</string>
    <string name="afirmativo">Si</string>
    <string name="continuar">¿Continuar?</string>
    <string name="checkbox">Jugar primero</string>
    <string name="turnoHumano">Le toca a usted</string>
    <string name="estado_fin">Partida finalizada</string>
    <string name="estado_tablas">Partida finalizada en tablas</string>
    <string name="estado_en_curso">Partida en curso</string>
    <string name="ganador_adv">Ganador Random Player</string>
    <string name="ganador_hum">Ganador Humano</string>
    <string name="style_title">Estilo</string>
    <string name="style_sub">Pulse para cambiar de estilo</string>
    <string name="music_title">Música</string>
    <string name="music_sub">Pulse para activar/desactivar la música</string>
    <string name="settings">Preferencias</string>
    <string name="olitheme">OliveTheme</string>
    <string name="marinetheme">MarineTheme</string>
    <string name="foresttheme">ForestTheme</string>
    <string name="oasistheme">OasisTheme</string>
    <string name="androidtheme">AndroidTheme</string>
    <string name="ajustes">Ajustes del juego</string>
    <string name="login_title">Login</string>
    <string name="username_hint">Nombre de usuario</string>
    <string name="pass_hint">Contraseña</string>
    <string name="repository_opening_error">Error creando repositorio</string>
    <string name="error_reading_rounds">Error cargando partidas</string>
    <string name="error_new_game">Error creando partida</string>
    <string name="register_button">Registrar</string>
    <string name="login_button">Entrar</string>
    <string name="logout">Salir</string>
    <string name="error_username">Todos los campos son obligatorios</string>
    <string name="ayuda">Ayuda</string>
    <string name="ayuda_login">\"El nombre de usuario y la contraseña son obligatorios. Si no esta registrado, pulse \'Registrar\' y se creará una cuenta nueva, si no, pulse \'Entrar\'. ¿Continuar?\"</string>
    <string name="error_updating">Error actualizando db</string>
</resources>
