<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:gravity="center_vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logintitle"
        android:text="@string/login_title"
        android:textSize="35dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_username"
        android:layout_below="@id/logintitle"
        android:layout_margin="10dp"
        android:hint="@string/username_hint"
        android:inputType="text" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_password"
        android:layout_below="@id/login_username"
        android:layout_margin="10dp"
        android:hint="@string/pass_hint"
        android:inputType="textPassword" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_user_button"
        android:text="@string/register_button"
        android:layout_below="@id/login_password"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttonshape"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:text="@string/login_button"
        android:layout_below="@id/new_user_button"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:background="@drawable/buttonshape"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/help_button"
        android:text="@string/ayuda"
        android:layout_below="@id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:background="@drawable/buttonshape"/>

</RelativeLayout>