<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_logout"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/logout"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/help_24dp"
        android:title="@string/ayuda"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_item_setting"
        android:title="@string/settings"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_stats"
        android:icon="@drawable/trending_up_24dp"
        android:title="Estadisticas"
        app:showAsAction="ifRoom|withText" />
</menu>